[metadata]
name = berbl-eval
version = 0.1.0
author = David Pätzel
author_email = david.paetzel@posteo.de
description = Helpers for evaluating experiments performed with berbl-exp
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/berbl-dev/berbl-eval
project_urls =
    Bug Tracker = https://github.com/berbl-dev/berbl-eval/issues
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    baycomp
    mlflow >=1.22.0
    numpy >=1.21.2
    pandas >=1.3.4
    pystan ==3.4.0

[options.packages.find]
where = src
